# utm

./: CMakeLists.txt
lib/app_menu/: CMakeLists.txt  app_menu.c  app_menu.h
lib/application/: CMakeLists.txt  application.c  application.h
lib/array/: CMakeLists.txt  array.c  array.h
lib/bin_file/: CMakeLists.txt  bin_file.c  bin_file.h
lib/libcar/: CMakeLists.txt  libcar.c  libcar.h
lib/linked_list/: CMakeLists.txt  linked_list.c  linked_list.h
lib/queue/: CMakeLists.txt  queue.h  queue_d.c
lib/sort/: CMakeLists.txt  sort.c  sort.h
lib/stack/: CMakeLists.txt  stack.c  stack.h
lib/txt_file/: CMakeLists.txt  txt_file.c  txt_file.h
sda/lab-1/: CMakeLists.txt  main.c
sda/lab-1/handlers/: handlers_1d.c  handlers_1d.h  handlers_2d.c  handlers_2d.h
sda/lab-1/helpers/: helpers.c  helpers.h
sda/lab-2/: CMakeLists.txt  handlers.c  handlers.h  main.c
sda/lab-3/: CMakeLists.txt  handlers.c  handlers.h  main.c
sda/lab-4/: CMakeLists.txt  handlers.c  handlers.h  main.c
sda/lab-5/: CMakeLists.txt  handlers.c  handlers.h  main.c
sda/lab-6/: CMakeLists.txt  handlers.c  handlers.h  main.c
